fixed header img not showing by moving it to html instead of css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,8 +19,6 @@ form {
 
 header {
 	text-align: center;
-	background-image: url("../images/animalplanet.png");
-	background-repeat: no-repeat;
 	height: 125px;
 	width: 100%;
 }
